<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context="fr.zabricraft.pickfalling.MainActivity">

    <TextView
        android:id="@+id/textHighScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonPlay"
        android:layout_marginTop="33dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textTotalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textHighScore"
        android:layout_marginTop="20dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/buttonPlay"
        android:layout_width="32pt"
        android:layout_height="32pt"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/play"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/buttonScores"
        android:layout_width="24pt"
        android:layout_height="24pt"
        android:layout_alignBottom="@+id/buttonPlay"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/buttonPlay"
        android:layout_toStartOf="@+id/buttonPlay"
        android:background="@drawable/leaderboards"
        android:visibility="gone"
        android:contentDescription="@string/leaderboards" />

    <ImageButton
        android:id="@+id/buttonAchievements"
        android:layout_width="24pt"
        android:layout_height="24pt"
        android:layout_alignBottom="@+id/buttonPlay"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/buttonPlay"
        android:layout_toRightOf="@+id/buttonPlay"
        android:background="@drawable/achievments"
        android:visibility="gone"
        android:contentDescription="@string/achievements" />

</RelativeLayout>