<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE436"
    tools:context="fr.zabricraft.pickfalling.LoseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:id="@+id/loseLayout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lost"
                android:textAlignment="center"
                android:textSize="38sp" />
            <TextView
                android:id="@+id/textLoseScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="28sp" />
            <TextView
                android:id="@+id/textHighScoreLose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonReplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:text="@string/replay_button"
                android:background="#ED7F10"
                android:textColor="#EEE"
                android:textAllCaps="false"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:text="@string/home_button"
                android:background="#ED7F10"
                android:textColor="#EEE"
                android:textAllCaps="false"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>